--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container">
           <ul class="copyright">
             <li>© Hai Gong.<a href="./AO_lecture/AO.html">All rights reserved</a>.</li>
-              <li><a href="hai_note/note.html"> Notes</a> </li>
+              <li><a href="notes/how_to_read_scientific_paper.html"> Notes</a> </li>
           </ul>
         </div>
       </section>
