--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
               <li class="fa-globe"><a href="https://www.researchgate.net/profile/Hai_Gong">Researchgate</a></li>
               <li class="fa-google-plus"><a href="https://scholar.google.nl/citations?user=tkCy32QAAAAJ&amp;hl=en">Google scholar</a></li>
               <div>
-                  <li class="fa-file-text"> <a href="http://note.gonehigh.cn"> Notes</a> </li>
+              <li class="fa-file-text"> <a href="http://note.gonehigh.cn"> Notes</a> </li>
+              <li class="fa-linkedin"><a href="https://www.linkedin.com/in/hai-gong-21942227/"> Linkedin</a></li>
             </ul>
           </div>
         </section>
@@ -83,13 +84,14 @@
             <div class="features">
               <article> <a href="#" class="image"><img src="images/DMD.png" alt=""></a>
                 <div class="inner">
-                  <h4>Phase retrieval</h4>
+                  <h4>DMD based lensless coherent imaging</h4>
+                        <p> <b>Keywords: digital micromirror device, phase retrieval, lensless imaging</b></p>
                   <p>Coming soon...</p>
                 </div>
               </article>
               <article> <a href="#" class="image"><img src="images/pic02.jpg" alt=""></a>
                 <div class="inner">
-                  <h4>Lensless coherent imaging</h4>
+                  <h4>SH based holographic imaging</h4>
                   <p>Coming soon...</p>
                 </div>
               </article>
