--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <section id="header">
       <header> <span class="image avatar"><img src="images/hai.jpg" alt=""></span>
-        <h1 id="logo"><a href="#"> <small>龚海</small><br>Hai Gong</a></h1>
+          <h4 id="logo"><a href="#"> 龚海<br>Hai Gong</a></h4>
         <font size="3"> <i>PhD candidate</i> <a href="mailto:h.gong@tudelft.nl"
 
             class="icon fa-envelope"><span class="label">Email</span></a><br>
