Add a page for ALT

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div><ul>
                <li><a href="http://altconference.org/proceedings">
                     Apply virtual adaptive optics to Shack-Hartmann sensor based coherent imaging</a><br>
-                    <b>H. Gong</b>, O. Soloviev, D. Wilding, P. Pozzi, G. Vdovin and M. Verhaegen, <i>Advanced Laser Technologies</i> 2016, Galway, Ireland
+                    <b>H. Gong</b>, O. Soloviev, D. Wilding, P. Pozzi, G. Vdovin and M. Verhaegen, <i>Advanced Laser Technologies</i> 2016, Galway, Ireland <a href="Presentations/2016-ALT.html">Talk</a>
                 </li>
                 
                 <li> <a href="http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=2520253">
