changed the name

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <!-- Header -->
     <section id="header">
       <header> <span class="image avatar"><img src="images/hai.jpg" alt=""></span>
-          <h4 id="logo"><a href="#"> 龚海 Hai Gong</a></h4>
-        <font size="3"> <i>PhD candidate</i> <a href="mailto:h.gong@tudelft.nl"
+            <h4 id="logo"><a href="#">Hai Gong</a></h4>
+            <h4>龚海</h4>
+<!--            <font size="3"> -->
+            <i>PhD candidate</i> 
+            <a href="mailto:h.gong@tudelft.nl" class="icon fa-envelope"><span class="label">Email</span></a><br>
 
-            class="icon fa-envelope"><span class="label">Email</span></a><br>
-
-          <a href="http://www.dcsc.tudelft.nl/"> Delft Center for Systems and
-            Control</a> </font> </header>
+            <a href="http://www.dcsc.tudelft.nl/"> Delft Center for Systems and Control</a> 
+<!--            </font> -->
+        </header>
       <nav id="nav">
         <ul>
           <li><a href="#one" class="active">About me</a></li>
