modified the name part

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h4>龚海</h4>
 <!--            <font size="3"> -->
             <i>PhD candidate</i> 
-            <a href="mailto:h.gong@tudelft.nl" class="icon fa-envelope"><span class="label">Email</span></a><br>
-
+            <a href="mailto:h.gong@tudelft.nl" class="icon fa-envelope"><span class="label">Email</span></a>
+            <br>
             <a href="http://www.dcsc.tudelft.nl/"> Delft Center for Systems and Control</a> 
 <!--            </font> -->
         </header>
