add tope's publication

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
             </head>
             <div>
                 <ul>
+                <li><a href="https://doi.org/10.1364/OL.42.002271">
+                    Aliasing, coherence, and resolution in a lensless holographic microscope</a><br>
+                    T. E. Agbana, <b>H. Gong</b>, A. S. Amoah, V. Bezzubik, M. Verhaegen, and G. Vdovin. <i>Optics Letters</i> 42, 2271-2274, 2017                
+                </li>
                 <li><a href="https://doi.org/10.1364/OL.42.002122">
                     Optical path difference  microscopy with a Shack-Hartmann wavefront sensor </a><br>
                     <b>H.Gong</b>, T. E. Agbana, P. Pozzi, O. Soloviev, M. Verhaegen, and G. Vdovin. <i>Optics Letters</i> 42, 2122-2125, 2017
@@ -158,7 +162,9 @@
             <div><ul>
                <li><a href="http://altconference.org/proceedings">
                     Apply virtual adaptive optics to Shack-Hartmann sensor based coherent imaging</a> 
-                    <a href="Presentations/2016-ALT.html" class="button alt small">TALK</a><br>
+                    <a href="Presentations/2016-ALT.html" class="button alt small">Presentation</a>
+<!--                   <i class="fa fa-area-chart" aria-hidden="true"></i>-->
+                   <br>
                     <b>H. Gong</b>, O. Soloviev, D. Wilding, P. Pozzi, G. Vdovin and M. Verhaegen, <i>Advanced Laser Technologies</i> 2016, Galway, Ireland  
                     
                 </li>
